[tool.poetry]
name = "phidata-playground"
version = "0.1.0"
description = ""
authors = ["Olaf Geibig <olaf@pobox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
phidata = {extras = ["docker"], version = "^2.5.5"}
python-dotenv = "^1.0.1"
openai = "^1.51.2"
fastapi = {extras = ["standard"], version = "^0.115.2"}
sqlalchemy = "^2.0.36"
duckduckgo-search = "^6.3.2"
yfinance = "^0.2.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
